# personal-site

./: README.md  app.py  freeze.py  photos.py  postcards.py  pyproject.toml  read_data.py  requirements.txt  style.css
.github/workflows/: pylint.yml
static/: newsletter-style.css  style.css  wrapped.css
static/data/: Berlin Beer & Book Club.csv
static/film_postcards/: data.txt
static/js/: link-peek.js  scroll_sections.js  update-link.js
static/markdown/: test.md  watercolour.md
static/scripts/: counters.js  fortune-cookie.js  photos copy.js  photos.js  sheets.js  sparkle-text.js
static/style/: additions.css  book-log.css  film-postcards.css  fortune-cookie.css  hag_chat.css  hagdo.css  kino.css  landing-page.css  magick.css  photo_grid.css  spooktober.css  the_big_scream.css  watercolour.css
sub_hag_chat/: funthingstodo.html  index.html  link-peek.js
templates/: 2022_10_22.html  about.html  base.html  base_book_club.html  base_hag_chat.html  book_club.html  book_club_about.html  book_club_stats.html  book_club_wrapped.html  changelog.html  cinema.html  colophon.html  counters.html  cultivation.html  digital_garden.html  film_postcards.html  hag_chat.html  home.html  landing-page-about.html  landing-page-template.html  landing-page.html  newsletter.html  photo_template.html  photos.html  slideshow.html  spooktober.html  sub_hag_chat.html
templates/archive/: about.html  changelog.html  colophon.html  counters.html  home.html  newsletter.html
templates/cinema/: cinema_love.html  little_theatre_2024_09.html
templates/jjjhagdo/: index.html
(+18 files in other folders)
