[tool.poetry]
name = "hfa-personal-site"
version = "0.1"
description = "Helen's personal static site"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
frozen-flask = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
